[project]
name = "face_ai"
version = "0.1.0"
description = "InsightFace demo notebook environment"
requires-python = ">=3.10,<3.11"

dependencies = [
  "insightface",
  "onnxruntime",
  "opencv-python",
  "pillow",
  "numpy<2",
  "ipykernel",
  "fastai",
  "deepface",
  "tf-keras",
  "nbconvert"
]

[tool.pip]
disable-pip-version-check = true
